<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="PositioningLeftBar" Id="{6e5613cd-eb02-436b-9725-b943e4923ce0}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
TYPE PositioningLeftBar :
STRUCT
	
	(* Outputs del Positioning Left Bar *)
	bClamp : BOOL;
	bRaise : BOOL;
	
	(* Inputs del Positioning Left Bar *)
	bClamped : BOOL;
	bLimit	 : BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>